# lpg-engine

./: .gitmodules  CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/src/: main.cpp
include/lpg/: lpg.hpp
src/: lpg_engine.cpp
src/lpg/: lpg.hpp
src/lpg/core/: AssetManager.cpp  AssetManager.hpp  GameMovement.cpp  GameMovement.hpp  Registry.cpp  Registry.hpp  SysCounter.hpp  SystemManager.cpp  SystemManager.hpp  World.cpp  World.hpp  core.hpp  data.cpp  data.hpp  entity.cpp  entity.hpp  entity_codegen.hpp  message.cpp  message.hpp  util.hpp  vec.hpp
src/lpg/entities/: Character.cpp  Character.hpp  DirectionalLight.hpp  Mesh.hpp  PerlinNoiseTerrain.hpp  PointLight.hpp  Terrain.cpp  Terrain.hpp  entities.cpp
src/lpg/systems/: BaseRender.cpp  BaseRender.hpp  PhysicsSimulationSystem.cpp  PhysicsSimulationSystem.hpp  RenderD3D9.cpp  RenderD3D9.hpp  RenderOGL.cpp  RenderOGL.hpp
src/lpg/util/: strided_span.hpp
